left menu bar done

--- a/src/styles/variables.scss
+++ b/src/styles/variables.scss
@@ -4,6 +4,7 @@
 
 $primary-color: #0a3d8d;
 $secondary-color: #14205b;
+$tertiary-color: #1164e7;
 $background-color: #f3f3fa;
 $success-color: #12ac59;
 $white-ff: rgb(238, 235, 235);
