--- a/src/app/core/components/navbar/navbar.component.scss
+++ b/src/app/core/components/navbar/navbar.component.scss
@@ -4,7 +4,7 @@
   font-family: "GothamMedium";
   height: 5rem;
   background-color: white;
-  min-width: 100vw;
+  min-width: calc(100vw);
   display: flex;
   display: -webkit-flex;
   flex-direction: row;
@@ -12,7 +12,7 @@
   justify-content: space-between;
 
   &__brand {
-    width: 20rem;
+    width: 15rem;
     display: flex;
     display: -webkit-flex;
     padding-left: 1.5rem;
@@ -62,6 +62,8 @@
       & > .main-navbar__title {
         padding-top: 0.5rem;
         color: $primary-color;
+        font-weight: 700;
+        font-family: 'GothamBold';
       }
     }
 
@@ -78,6 +80,7 @@
       display: flex;
       display: -webkit-flex;
       flex-direction: column;
+      align-items: end;
       gap: .5rem;
 
       &--valid {
@@ -93,6 +96,9 @@
         padding-top: 0.5rem;
         color: $secondary-color;
         font-size: 1.125rem;
+        font-weight: 700;
+        font-family: 'GothamBold';
+        text-overflow: ellipsis;
       }
       
       & > .main-navbar__subtitle {
@@ -113,5 +119,11 @@
         color: $primary-color;
       }
     }
+  }
+}
+
+@media (min-width: 800px) {
+  .main-navbar {
+    min-width: calc(100vw - 19rem);
   }
 }
