--- a/src/app/features/home/pages/dashboard/dashboard.component.html
+++ b/src/app/features/home/pages/dashboard/dashboard.component.html
@@ -1,5 +1,9 @@
 <div class="dashboard">
   <app-menu-bar> </app-menu-bar>
-  <app-navbar></app-navbar>
   <app-sidebar> </app-sidebar>
+ 
+  <div class="content">
+    <app-navbar></app-navbar>
+    <app-dashboard-content></app-dashboard-content>
+  </div>
 </div>
