--- a/src/app/features/home/pages/dashboard/dashboard.component.scss
+++ b/src/app/features/home/pages/dashboard/dashboard.component.scss
@@ -1,6 +1,11 @@
 .dashboard {
     display: grid;
-    grid-template-columns: 1fr 2fr;
-    grid-auto-rows: 1fr;
+    grid-template-columns: repeat(3, 1fr);
     height: 100vh;
+}
+
+.content {
+    display: flex;
+    display: -webkit-flex;
+    flex-direction: column;
 }
