--- a/src/app/features/home/components/dashboard-content/dashboard-content.component.html
+++ b/src/app/features/home/components/dashboard-content/dashboard-content.component.html
@@ -1,1 +1,9 @@
-<div class="dashboard-content">dashboard-content works!</div>
+<div class="dashboard-content">
+    <app-user-info></app-user-info>
+    <div class="dashboard-grid-wrapper">
+        <div class="box box-historic">Two</div>
+  <div class="box">Three</div>
+  <div class="box">Four</div>
+  <div class="box">Five</div>
+    </div>
+</div>
