--- a/src/styles/variables.scss
+++ b/src/styles/variables.scss
@@ -1,4 +1,11 @@
 /*
+Container Size
+*/
+
+$menubar-width: 19rem;
+$navbar-height: 5rem;
+
+/*
  Base Colors
 */
 
@@ -7,6 +14,7 @@ $secondary-color: #14205b;
 $tertiary-color: #1164e7;
 $background-color: #f3f3fa;
 $success-color: #12ac59;
+$warning-color: #f6921e;
 $white-ff: rgb(238, 235, 235);
 
 /*
