--- a/src/styles/variables.scss
+++ b/src/styles/variables.scss
@@ -15,6 +15,7 @@ $tertiary-color: #1164e7;
 $background-color: #f3f3fa;
 $success-color: #12ac59;
 $warning-color: #f6921e;
+$warning-alt-color: #dd7906;
 $white-ff: rgb(238, 235, 235);
 
 /*
