--- a/src/app/features/home/components/dashboard-content/dashboard-content.component.scss
+++ b/src/app/features/home/components/dashboard-content/dashboard-content.component.scss
@@ -8,26 +8,37 @@
   display: flex;
   display: -webkit-flex;
   flex-direction: column;
-  overflow-y:scroll;
+  overflow-y: scroll;
 }
 
 .dashboard-grid-wrapper {
   display: grid;
   margin-left: 2rem;
   margin-right: 2rem;
-  margin-top: 2rem;
+  margin-top: 1rem;
+  margin-bottom: 1rem;
   gap: 1rem;
-  grid-template-columns: repeat(3, 1fr);
-  grid-auto-rows: 13rem;
+  grid-template-columns: repeat(2, 1fr);
+  grid-auto-rows: 15rem;
 
   @media (min-width: 800px) {
-    margin-top: 5rem;
+    grid-template-columns: repeat(3, 1fr);
+    margin-top: 4rem;
   }
 }
 
 .box {
   background-color: white;
   border-radius: 0.5rem;
+
+  &:hover {
+    -webkit-box-shadow: -1px 10px 8px 1px rgba(143, 137, 143, 0.62);
+    -moz-box-shadow: -1px 10px 8px 1px rgba(143, 137, 143, 0.62);
+    box-shadow: -1px 10px 8px 1px rgba(143, 137, 143, 0.62);
+    transition-timing-function: ease-out;
+    transition: all;
+    transition-duration: 0.5s;
+  }
 }
 
 .box-historic {
@@ -36,6 +47,84 @@
   grid-column-end: 2;
   grid-row-start: 1;
   grid-row-end: 2;
+
+  &__content {
+    display: flex;
+    display: -webkit-flex;
+    flex-direction: column;
+    align-items: start;
+    gap: 3rem;
+    padding-left: 2rem;
+    padding-right: 2rem;
+    padding-top: 4rem;
+  }
+
+  &__icon-button {
+    border: none;
+    cursor: pointer;
+    padding-left: 0.3rem;
+    padding-right: 0.3rem;
+    height: 3rem;
+    width: 2.8rem;
+    display: flex;
+    flex-direction: row;
+    background-color: $background-color;
+    border-radius: 0.5rem;
+  }
+
+  &__title {
+    font-size: 1.366rem;
+    font-family: "GothamBold";
+    font-weight: 700;
+    color: $primary-color;
+  }
+
+  &__subtitle {
+    font-size: 1.5rem;
+    font-family: "GothamLight";
+    font-weight: 300;
+    color: $primary-color;
+  }
+
+  &__amount {
+    font-size: 2.946rem;
+    font-family: "GothamBold";
+    font-weight: 700;
+    color: $secondary-color;
+  }
+
+  &__button {
+    width: 100%;
+    height: 4rem;
+    border: none;
+    display: flex;
+    border-radius: 1rem;
+    display: -webkit-flex;
+    flex-direction: row;
+    align-items: center;
+    padding-left: 2rem;
+    padding-right: 2rem;
+    justify-content: space-between;
+    gap: 1rem;
+    background-color: $warning-color;
+
+    &:hover {
+      background-color: $warning-alt-color;
+    }
+
+    &-title {
+      font-family: "GothamMedium";
+      padding-top: 0.5rem;
+      font-weight: 500;
+      color: white;
+      font-size: 1.125rem;
+
+      &:hover {
+        font-family: "GothamBold";
+        font-weight: 700;
+      }
+    }
+  }
 
   @media (min-width: 800px) {
     display: initial;
