--- a/src/styles/variables.scss
+++ b/src/styles/variables.scss
@@ -13,6 +13,7 @@ $primary-color: #0a3d8d;
 $secondary-color: #14205b;
 $tertiary-color: #1164e7;
 $background-color: #f3f3fa;
+$background-alt-color: #c0ccde;
 $success-color: #12ac59;
 $warning-color: #f6921e;
 $warning-alt-color: #dd7906;
