--- a/src/app/features/home/components/dashboard-content/dashboard-content.component.scss
+++ b/src/app/features/home/components/dashboard-content/dashboard-content.component.scss
@@ -1,8 +1,18 @@
 @import "../../../../../styles/variables.scss";
+@import "../../../../../styles/mixins.scss";
+
+@mixin icon-button {
+  border: none;
+  cursor: pointer;
+  display: flex;
+  flex-direction: row;
+  background-color: $background-color;
+  border-radius: 0.5rem;
+}
 
 .dashboard-content {
   background-color: aqua;
-  height: calc(100vh - $navbar-height);
+  //height: calc(100vh - $navbar-height);
   //width: calc(100vw - $menubar-width);
   background-color: $background-color;
   display: flex;
@@ -30,6 +40,117 @@
 .box {
   background-color: white;
   border-radius: 0.5rem;
+
+  &__content {
+    display: flex;
+    display: -webkit-flex;
+    flex-direction: column;
+    align-items: start;
+    gap: 2rem;
+    padding-left: 2rem;
+    padding-right: 2rem;
+    padding-top: 3rem;
+
+    &-header {
+      display: flex;
+      display: -webkit-flex;
+      flex-direction: row;
+      align-items: center;
+      color: $secondary-color;
+      gap: 1rem;
+      width: 100%;
+      height: 3rem;
+    }
+  }
+
+  &__icon-button {
+    @include icon-button;
+    padding-left: 0.3rem;
+    padding-right: 0.3rem;
+    height: 3.5rem;
+    width: 3.2rem;
+  }
+
+  &__icon {
+    width: 2.5rem;
+  }
+
+  &__title {
+    font-size: 1.25rem;
+    padding-top: 2rem;
+    @include gothamMedium;
+  }
+
+  &__subtitle {
+    font-size: 1.1rem;
+    color: $secondary-color;
+    padding-top: 0.5rem;
+    text-overflow: ellipsis;
+    @include gothamMedium;
+  }
+
+  &__description {
+    font-size: 1rem;
+    @include gothamLight;
+    color: $secondary-color;
+  }
+
+  &__link {
+    color: $secondary-color;
+    text-decoration: underline;
+    font-size: 0.75rem;
+    text-overflow: ellipsis;
+    @include gothamMedium;
+  }
+  &__completion {
+    display: flex;
+    flex-direction: column;
+    align-items: end;
+    gap: 0.5rem;
+    width: 100%;
+
+    &-percentage {
+      font-size: 1rem;
+      @include gothamLight;
+      color: $secondary-color;
+    }
+  }
+
+  &__foot {
+    position: relative;
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    width: 100%;
+    height: 4rem;
+    border-radius: .5rem;
+  }
+
+  &__line {
+    position: absolute;
+    width: 60%;
+    bottom: 0;
+    height: .25rem;
+    border-radius: .5rem;
+    background-color: $background-alt-color;
+  }
+
+  &__loading {
+    display: flex;
+    display: row;
+    width: 100%;
+    background-color: $background-alt-color;
+    border-radius: 1rem;
+    height: 0.45rem;
+    align-items: start;
+
+    &-bar {
+      width: 58%;
+      border-radius: 1rem;
+      background-color: $tertiary-color;
+      height: 0.45rem;
+    }
+  }
 
   &:hover {
     -webkit-box-shadow: -1px 10px 8px 1px rgba(143, 137, 143, 0.62);
@@ -60,36 +181,28 @@
   }
 
   &__icon-button {
-    border: none;
-    cursor: pointer;
+    @include icon-button;
     padding-left: 0.3rem;
     padding-right: 0.3rem;
     height: 3rem;
     width: 2.8rem;
-    display: flex;
-    flex-direction: row;
-    background-color: $background-color;
-    border-radius: 0.5rem;
   }
 
   &__title {
     font-size: 1.366rem;
-    font-family: "GothamBold";
-    font-weight: 700;
+    @include gothamBold;
     color: $primary-color;
   }
 
   &__subtitle {
     font-size: 1.5rem;
-    font-family: "GothamLight";
-    font-weight: 300;
+    @include gothamLight;
     color: $primary-color;
   }
 
   &__amount {
     font-size: 2.946rem;
-    font-family: "GothamBold";
-    font-weight: 700;
+    @include gothamBold;
     color: $secondary-color;
   }
 
@@ -113,15 +226,13 @@
     }
 
     &-title {
-      font-family: "GothamMedium";
+      @include gothamMedium;
       padding-top: 0.5rem;
-      font-weight: 500;
       color: white;
       font-size: 1.125rem;
 
       &:hover {
-        font-family: "GothamBold";
-        font-weight: 700;
+        @include gothamBold;
       }
     }
   }
