--- a/src/app/core/components/sidebar/sidebar.component.html
+++ b/src/app/core/components/sidebar/sidebar.component.html
@@ -1,7 +1,7 @@
 <div class="sidebar" [style.width.px]="width">
   <div class="sidebar__header">
     <h3>{{ title }}</h3>
-    <button class="close" (click)="this.close()"></button>
+    <button class="close" (click)="this.close()">x</button>
   </div>
   <div class="sidebar__body"><ng-content></ng-content></div>
   <div class="sidebar__grabber"></div>
